syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "googleapis/google/api/annotations.proto";
option go_package = "../BookingService/pb";

message Booking {
  int64 id = 1;
  int64 customer_id = 2;
  int64 flight_id = 3;
  string code = 4;
  string status = 5;
  int64 ticket_id = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}
message CreateBookingRequest {
  string flight_name = 1;
  string email = 2;
  string phone_number = 3;
  string name = 4;
  string address = 5;
  google.protobuf.Timestamp date_of_birth = 6;
  string identify_number = 7;
  string member_code = 8;
  int64 ticket_type = 9;
}

message GetBookingRequest {
  int64 id = 1;
  string code = 2;
}

message CancelBookingRequest {
  string booking_code = 1;
}

message ListBookingRequest {
  int64 page = 1;
  int64 limit = 2;
}

message ListBookingResponse {
  repeated Booking booking_list = 1;
  int64 total = 2;
  int64 page = 3;
}

message UpdateBookingStatusRequest {
  int64 flight_id = 1;
  string status = 2;
}

message UpdateBookingStatusResponse {
  string status = 1;
}

service BookingManager {
  rpc CreateBooking (CreateBookingRequest) returns (Booking) {
    option (google.api.http) = {
      post: "/v1/bookings"
      body: "*"
    };
  }
  rpc UpdateBooking (Booking) returns (Booking) {
    option (google.api.http) = {
      put: "/v1/bookings/{id}"
      body: "*"
    };
  }
  rpc CancelBooking (CancelBookingRequest) returns (Booking) {
    option (google.api.http) = {
      delete: "/v1/bookings/{booking_code}"
    };
  }
  rpc GetBooking (GetBookingRequest) returns (Booking) {
    option (google.api.http) = {
      get: "/v1/bookings/{id}"
    };
  }
  rpc UpdateBookingStatus (UpdateBookingStatusRequest) returns (UpdateBookingStatusResponse) {
    option (google.api.http) = {
      post: "/v1/bookings/{flight_id}/status"
      body: "*"
    };
  }
  rpc ListBooking (ListBookingRequest) returns (ListBookingResponse) {
    option (google.api.http) = {
      get: "/v1/bookings"
    };
  }
}
