syntax = "proto3";

package public;

message UserRole {
  int64 id = 1;
  int32 user_id = 2;
  int32 role_id = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message UserRoles {
  repeated UserRole user_roles = 1;
}

import "google/protobuf/timestamp.proto";
